# agentic-learnings

./: main.py  pyproject.toml  requirements.txt
Agents/: main.ipynb
DebugAndMonitoring/: langsmith.ipynb
hugging-face/: hugging-face-tut.ipynb
human-feedback/: human-feedback.ipynb
langgraph-advanced/: advanced-langgraph.ipynb
mcp-servers/: mcp-servers.ipynb
projects/ai-story-generator/: ai-generator.ipynb
projects/research-agent/: research-agent-rag.ipynb  research-agent.ipynb
projects/research-agent/chroma_db/: chroma.sqlite3
projects/travel-planner-agent/: travel-planner-agent.ipynb
projects/yt-video-qa/: yt-agent.ipynb
pydantic/: pydantic-learnings.ipynb
