[project]
name = "langproj"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "awscli>=1.45.6",
    "boto3>=1.43.6",
    "dotenv>=0.9.9",
    "langchain>=1.3.0",
    "langchain-aws>=1.4.6",
    "langchain-google-genai>=4.2.2",
    "langchain-groq>=1.1.2",
    "langchain-mcp-adapters>=0.2.2",
    "langchain-tavily>=0.2.18",
    "langgraph>=1.2.0",
    "langsmith>=0.8.3",
    "mcp>=1.27.1",
    "openai>=2.36.0",
    "requests>=2.34.0",
]
