[project]
name = "langproj"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "awscli>=1.45.6",
    "boto3>=1.43.6",
    "chromadb>=1.5.9",
    "dotenv>=0.9.9",
    "langchain>=1.3.0",
    "langchain-aws>=1.4.6",
    "langchain-chroma>=1.1.0",
    "langchain-community>=0.4.1",
    "langchain-google-genai>=4.2.2",
    "langchain-groq>=1.1.2",
    "langchain-huggingface>=1.2.2",
    "langchain-mcp-adapters>=0.2.2",
    "langchain-tavily>=0.2.18",
    "langchain-text-splitters>=1.1.2",
    "langgraph>=1.2.0",
    "langsmith>=0.8.3",
    "mcp>=1.27.1",
    "openai>=2.36.0",
    "pypdf>=6.11.0",
    "python-dotenv>=1.2.2",
    "requests>=2.34.0",
    "sentence-transformers>=5.5.0",
]
