[project]
name = "langproj"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate>=1.13.0",
    "awscli>=1.45.6",
    "boto3>=1.43.6",
    "chromadb>=1.5.9",
    "diffusers>=0.37.1",
    "dotenv>=0.9.9",
    "fastapi>=0.136.3",
    "faster-whisper>=1.2.1",
    "ffmpeg-python>=0.2.0",
    "imageio>=2.37.3",
    "imageio-ffmpeg>=0.6.0",
    "ipykernel>=7.2.0",
    "ipywidgets>=8.1.8",
    "langchain>=1.3.0",
    "langchain-aws>=1.4.6",
    "langchain-chroma>=1.1.0",
    "langchain-community>=0.4.1",
    "langchain-google-genai>=4.2.2",
    "langchain-groq>=1.1.2",
    "langchain-huggingface>=1.2.2",
    "langchain-mcp-adapters>=0.2.2",
    "langchain-tavily>=0.2.18",
    "langchain-text-splitters>=1.1.2",
    "langgraph>=1.2.0",
    "langsmith>=0.8.3",
    "mcp>=1.27.1",
    "openai>=2.36.0",
    "openai-whisper>=20250625",
    "pypdf>=6.11.0",
    "python-dotenv>=1.2.2",
    "python-multipart>=0.0.28",
    "requests>=2.34.0",
    "sentence-transformers>=5.5.0",
    "torch>=2.12.0",
    "transformers[torch]>=5.8.1",
    "uvicorn>=0.47.0",
    "yt-dlp>=2026.3.17",
]
